# meeting-intelligence-pipelines

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: architecture.md  autoresearch-real-loop.md  autoresearch.md  real-workflow.md  video-summarize.md  voicememo.md
examples/autoresearch/: evaluation_cases.json
examples/sanitized-artifacts/: README.md
examples/sanitized-artifacts/autoresearch/: voice-memo-summary-qwen3.6-27b-q5_K_M.job.json  voice-memo-summary-qwen3.6-27b-q5_K_M.proposal.json  voice-memo-summary-qwen3.6-27b-q5_K_M.summary.json
examples/sanitized-artifacts/voice-memo-recording/: glm-5.1 summary.md  metadata.json  mlx-qwen3.6-27b-optiq-4bit summary.md  qwen3.6-27b-q5_K_M summary.md  qwen3.6-35b-q4_K_M summary.md  summary-evaluation.json  summary-evaluation.md  transcript.txt
examples/transcripts/: product_walkthrough.txt  team_sync.txt
scripts/: public_safety_scan.py  replay_pipeline.py  run_autoresearch_demo.py  run_full_demo.py  run_video_summary_demo.py  run_voice_memo_demo.py
src/meeting_intelligence/: __init__.py  autoresearch.py  meeting_notes.py  replay.py  transcript.py  video_summary.py
tests/: test_autoresearch.py  test_meeting_notes.py  test_public_safety.py  test_replay.py  test_sanitized_artifacts.py  test_video_summary.py
